# Engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  copyright  generate_docs.sh  main.cpp  portfile.cmake  vcpkg.json
.github/workflows/: build-deb.yml  build-deb.yml~  build-linux.yml  build-rpm.yml  build-windows.yml
Archetype/: Archetypes.cpp
Components/: Components.cpp  Components.h  DrawableComponent.h
Components/all_components/: Audio.cpp  Audio.h  CMakeLists.txt  Rendering.cpp  Rendering.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
Entity/: entity.cpp  entity.h  entityManager.cpp  entityManager.h
Event/: event.cpp
GameEngine/: gameEngine.cpp  gameEngine.h
World/: world.cpp  world.h
configPackage/: engineConfig.cmake  quantumvortex-engineConfig.cmake
debian/: changelog
debian_files/: changelog  control  copyright  rules
docs/html/: annotated.html  classes.html  dir_000069_000078.html  dir_000070_000078.html  dir_000087_000078.html  dir_004876724d79281ffd45de5faa318b0f.html  dir_00e42326d7e228585c6a46fdd032c359.html  dir_01506af34e836040c7a5937ac54fb6e5.html  dir_01506af34e836040c7a5937ac54fb6e5_dep.map  dir_01506af34e836040c7a5937ac54fb6e5_dep.md5  dir_0179cfa09a1b3d19848fe4815b1360d0.html  dir_04084c2aad87836ea0a6ca5bae18ccbb.html  dir_04084c2aad87836ea0a6ca5bae18ccbb_dep.map  dir_04084c2aad87836ea0a6ca5bae18ccbb_dep.md5  dir_0482c39b7df0b06bfaa199bc829ce606.html  dir_07601a9046ab7d9b6c6cf9582fd47380.html  dir_08db6fc4a7c650916990aa236b29853c.html  dir_08db6fc4a7c650916990aa236b29853c_dep.map  dir_08db6fc4a7c650916990aa236b29853c_dep.md5  dir_08f45fe6822aeb4ce2bc268e3b1361be.html  dir_0bb5b58e65171a93cb4da322821e0e3d.html  dir_0d88aa5af37a6ae02e52d89b7c1b90c1.html  dir_114e0820667482c40423d4536c603148.html  dir_119b1ea608c82e8ef1352273604d0691.html  dir_119b1ea608c82e8ef1352273604d0691_dep.map  dir_119b1ea608c82e8ef1352273604d0691_dep.md5  dir_126caae8a68c1fa46b558f1244b1b188.html  dir_12c450650e1bbe41a4e5011aa6f0380c.html  dir_15a7bf71fd2232cc48c47e2663352535.html  dir_15f30029a8909ed3f59c87794e60d5e7.html  dir_15f30029a8909ed3f59c87794e60d5e7_dep.map  dir_15f30029a8909ed3f59c87794e60d5e7_dep.md5  dir_1788aacbbe810ba6bf2b3fdb69790508.html  dir_1788aacbbe810ba6bf2b3fdb69790508_dep.map  dir_1788aacbbe810ba6bf2b3fdb69790508_dep.md5  dir_1b0ee1df51920bca43d2d7c09fefb787.html  dir_1b0ee1df51920bca43d2d7c09fefb787_dep.map  dir_1b0ee1df51920bca43d2d7c09fefb787_dep.md5  dir_1b3fdf0d6382072a84d8ba5f121b51ef.html  dir_1b3fdf0d6382072a84d8ba5f121b51ef_dep.map  (+2533 more)
docs/html/d0/d02/: structVkExtent3D.html
docs/html/d0/d03/: structVkFormatProperties2__coll__graph.map  structVkFormatProperties2__coll__graph.md5
docs/html/d0/d06/: ftadvanc_8h_source.html
docs/html/d0/d07/: structVkImageFormatProperties2__coll__graph.map  structVkImageFormatProperties2__coll__graph.md5
docs/html/d0/d0a/: classCatch_1_1ScopedMessage.html  classsf_1_1priv_1_1SoundFileReaderFlac-members.html  format_8h_source.html
docs/html/d0/d0b/: structFT__Outline__Funcs____coll__graph.map  structFT__Outline__Funcs____coll__graph.md5
docs/html/d0/d0d/: structVkDisplayProperties2KHR__coll__graph.map  structVkDisplayProperties2KHR__coll__graph.md5  structVkRenderPassMultiviewCreateInfo.html
docs/html/d0/d0f/: classRendering__inherit__graph.dot
docs/html/d0/d10/: classCatch_1_1MatchExpression__coll__graph.map
docs/html/d0/d13/: structVkDescriptorPoolSize-members.html
docs/html/d0/d16/: structCatch_1_1Matchers_1_1StdString_1_1EqualsMatcher__inherit__graph.map  structCatch_1_1Matchers_1_1StdString_1_1EqualsMatcher__inherit__graph.md5
docs/html/d0/d17/: classAudioTest__coll__graph.dot  structTT__Header__.html
docs/html/d0/d18/: classsf_1_1Mouse.html
docs/html/d0/d26/: classEffect__coll__graph.map  (+2 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+128 more)
docs/latex/: annotated.tex  files.tex  hierarchy.tex  index.tex  modules.tex  namespaces.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
include/: all_components.h  main.h  sfml.h  std.h
includeRessources/: font.h  musics.h  sounds.h  textures.h
scripts/: build-windows-engine.nsi  build-windows-game.nsi
src/Archetype/: Archetypes.h
src/Archetype/include/: Archetypes.h
src/Components/: Components.cpp
src/Components/all_components/: Audio.cpp  Audio.h  Collision.cpp  Music.cpp  Sound.cpp  Sprite.cpp  Sprite.h  Text.cpp  Transform.cpp  Transform.h
src/Components/include/: Components.h  DrawableComponent.h
src/Entity/: entity.cpp  entity.h  entityManager.cpp
src/Entity/include/: entity.h  entityManager.h
src/Event/: event.h  eventEngine.cpp
src/Event/include/: eventEngine.h
src/GameEngine/: gameEngine.cpp  gameEngine.h
src/GameEngine/include/: gameEngine.h
src/Other/: Color.cpp  Rect.cpp  Vector2.cpp
src/Other/include/: Color.h  Rect.h  Vector2.h
src/Script/: Script.cpp
src/Script/include/: Script.h
src/World/: world.cpp  world.h
src/World/include/: world.h
src/include/: all_components.h
src/tests/: CMakeLists.txt
src/tests/Components/all_components/: TestSprite.cpp  TestTransform.cpp
src/tests/Entity/: TestEntityManager.cpp
src/toSFML/: toSFML.cpp
src/toSFML/include/: toSFML.h
tests/: CMakeLists.txt
tests/Components/all_components/: TestAudio.cpp  TestMusic.cpp  TestRendering.cpp  TestSound.cpp  TestSprite.cpp  TestText.cpp  TestTransform.cpp
tests/Entity/: TestEntity.cpp  TestEntityManager.cpp
tests/Event/: TestEvent.cpp
tests/GameEngine/: TestGameEngine.cpp
tests/Other/: TestColor.cpp  TestRect.cpp  TestVector2.cpp
tests/World/: TestWorld.cpp
tests/toSFML/: TesttoSFML.cpp
vcpkgPorts/: portfile.cmake  vcpkg.json
(+5153 files in other folders)
